# galactic-clock

./: .gitignore  CMakeLists.txt  lwipopts.h  main.cpp  ntp.c  ntp.h
src/: networkmanager.cpp  ntp.cpp
